mysql/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mysql
spec:
    replicas: 1
    strategy:
        type: RollingUpdate
    selector:
        matchLabels:
            app: mysql
    template:
        metadata:
            name: mysql
            labels:
                app: mysql
        spec:
            containers:
            - name: mysql
              image: mysql:5.6
              volumeMounts:
              - name: mysql-data
                mountPath: /var/lib/mysql
              ports:
              -  containerPort: 80
                 name: mysql
            volumes:
            - name: mysql-data
              hostPath: 
                path: /usr/data
                type: DirectoryOrCreate
            nodeName: k8s-node3
