mysql/mysql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  namespace: mysql
  labels:
    app: mysql
    tier: backend
    
spec:
  containers:
    - image: mysql:5.6
      name: mysql
      ports:
        - containerPort: 3306
          name: mysql
