mysql/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset
  namespace: mysql
spec:
  serviceName: "mysql-service"
  replicas: 3
  selector:
    matchLabels:
      app: mysql
      tier: backend
  template:
    metadata:
      labels:
        app: mysql
        tier: backend
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 4455
              name: mysql
