mysql/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: wordpress

spec:
    replicas: 1
    strategy: 
      type: Recreate
    selector:
        matchLabels:
            app: wordpress
    template:
      metadata:
        labels:
            app: wordpress
      spec:
        containers:
        - image: wordpress:5.4-apache
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
          volumeMounts:
          - name: wordpress-storage
            mountPath: /var/www/html        
        volumes:
        - name: wordpress-storage
          hostPath:
            path: /usr/data
            type: DirectoryOrCreate
        nodeName: k8s-node2
