mysql/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: mysql
spec:
  ports:
    - port: 4455
  selector:
    app: mysql
    tier: backend
  clusterIP: None
